# fsoft2026_1DD_4

./: .gitignore  CMakeLists.txt
Documentation/: domain_model.puml
Documentation/Iteration 1/: README.md  functional_requirements.md  non_functional_requirements.md  use_cases.puml
Documentation/Iteration 2/: component_diagram.puml  deployment_diagram.puml
Documentation/Iteration 2/Design/: component_diagram.puml  controller_class_diagram.puml  domain_model_it2.puml  exceptions_diagram.puml  (+4 more)
Project/: CMakeLists.txt  main.cpp
Project/headers/containers/: AthleteContainer.h  ClassEnrollmentContainer.h  ClassSessionContainer.h  InstructorContainer.h  ModalityContainer.h  PaymentContainer.h  RoomContainer.h
Project/headers/exceptions/: InvalidDataException.h
Project/headers/model/: Administrator.h  Athlete.h  ClassEnrollment.h  ClassSession.h  Gym.h  Instructor.h  Modality.h  OpeningHours.h  Payment.h  Room.h  Schedule.h  User.h
Project/headers/repo/: GymRepositoryMemory.h
Project/headers/services/: AthleteService.h  InstructorService.h  ModalityService.h
Project/sources/containers/: AthleteContainer.cpp  InstructorContainer.cpp  ModalityContainer.cpp
Project/sources/exceptions/: InvalidDataException.cpp
Project/sources/model/: Athlete.cpp  Gym.cpp  Instructor.cpp  Modality.cpp  User.cpp
Project/sources/repo/: GymRepositoryMemory.cpp
Project/sources/services/: AthleteService.cpp  InstructorService.cpp  ModalityService.cpp
docs/: context_problem.md  domain_model.puml  glossary.md  ssd_uc1.puml  ssd_uc10.puml  ssd_uc6.puml  use_cases.puml
(+15 files in other folders)
